# diffAURC

./: .gitignore  README.md  pyproject.toml
data/: resnet110_c10_logits.p
paper/: acl.sty  aurc.tex  draft.tex  main.bib  main.tex
paper/images/: ablation_batchsize.html  ablation_batchsize_30seeds.html  ablation_batchsize_zerooneloss_30seeds.html
src/: AURC_implementations.py  AURC_loss.py  diff_aurc.py  intuition_AURC.ipynb  metrics.py  test_differentiability_AURC.py
