[tool.poetry]
name = "diffAURC"
version = "0.1.0"
description = "something"
authors = ["Jordy Van Landeghem <jordy@contract.fit>"]

readme = 'README.md'  # Markdown files are supported
keywords = ['research', 'evaluation', 'document classification']

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
scikit-learn = "^1.2.0"
pillow = "^9.4.0"
scipy ="^1.10.0"
pandas = "^1.5.3"
plotly = "^5.13.1"
torch = "^1.13.1"
evaluate = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^3.10.1"
pytest-cov = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
